# pomotui

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/pomotui/: __init__.py  __main__.py  app.py
src/pomotui/database/: __init__.py  manager.py  schema.py
src/pomotui/models/: __init__.py  config.py  statistics.py  task.py
src/pomotui/notifications/: __init__.py  sound.py
src/pomotui/screens/: __init__.py  confirm_dialog.py  stats_screen.py  task_screen.py
src/pomotui/timer/: __init__.py  pomodoro.py  state.py
src/pomotui/widgets/: __init__.py  task_list.py  timer_display.py
tests/: __init__.py  test_app.py  test_database.py  test_models.py  test_sound_notifications.py  test_statistics.py  test_task.py  test_task_crud.py  test_task_selection.py  test_theme_persistence.py  test_timer.py
